--- a/Data_Visualization_Reference_and_Practice.ipynb
+++ b/Data_Visualization_Reference_and_Practice.ipynb
@@ -45,7 +45,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "08b00437",
       "metadata": {
         "id": "08b00437"
@@ -75,7 +75,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "924faf71",
       "metadata": {
         "id": "924faf71",
@@ -121,7 +121,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "bf9ccb01",
       "metadata": {
         "id": "bf9ccb01"
@@ -159,7 +159,7 @@
       "cell_type": "code",
       "source": [
         "x_array = np.linspace(0, 5, num=10)     # creates an array named x_array using np.linspace\n",
-        "y_calcs = simple_function(x_array)        # creates an array named y_calcs which is a function of xvals using simple_funtion\n",
+        "y_calcs = simple_function(x_array)      # creates an array named y_calcs which is a function of xvals using simple_funtion\n",
         "plt.scatter(x_array, y_calcs)           # creates a scatter plot of y_calcs vs x_array - only plots data points\n",
         "plt.show()                              # show the plot"
       ],
@@ -172,7 +172,7 @@
         }
       },
       "id": "s0dbNMO2QEu4",
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -203,7 +203,7 @@
         "# First bring back the previous Plot\n",
         "\n",
         "x_array = np.linspace(0, 5, num=10)     # creates an array named x_array using np.linspace\n",
-        "y_calcs = simple_function(x_array)        # creates an arryt named y_calcs which is a function of xvals using simple_funtion\n",
+        "y_calcs = simple_function(x_array)      # creates an array named y_calcs which is a function of xvals using simple_function\n",
         "plt.scatter(x_array, y_calcs)           # creates a scatter plot of y_calcs vs x_array - only plots data points\n",
         "plt.xlabel(\"x\")                         # Set x-axis label\n",
         "plt.ylabel(\"y\")                         # Set y-axis label\n",
@@ -219,7 +219,7 @@
         "outputId": "502a758e-7502-478f-d08d-4b62710c5603"
       },
       "id": "3U8m55-U6XXZ",
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -256,7 +256,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "1a5fad42",
       "metadata": {
         "id": "1a5fad42",
@@ -295,6 +295,18 @@
         "id": "pYAIEbFc9maY"
       },
       "id": "pYAIEbFc9maY"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Go back to the prior code box and Try adjusting the code for color, marker, and alpha.\n",
+        "\n",
+        "DO a google search on 'matplotlib colors' and 'matplotlib markers' to see how easy it is to get information."
+      ],
+      "metadata": {
+        "id": "uzvPeW258k4J"
+      },
+      "id": "uzvPeW258k4J"
     },
     {
       "cell_type": "markdown",
@@ -391,7 +403,7 @@
         }
       },
       "id": "MScqQnFWt6xz",
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -450,7 +462,7 @@
         }
       },
       "id": "HtUXE9UmqKxa",
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -503,7 +515,7 @@
         }
       },
       "id": "Ia5n7WQZwRG3",
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -558,7 +570,7 @@
         }
       },
       "id": "6m8OEN1jp3Hd",
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -584,7 +596,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "id": "d52f7485",
       "metadata": {
         "id": "d52f7485",
